--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,15 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html,
 body {
   max-width: 100vw;
-  font-family: 'Montserrat', sans-serif;
+  max-height: 100vh;
+  background-color: var(--secondary-light-color);
+  
 }
 
 
