--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,10 @@ body {
   max-width: 100vw;
   max-height: 100vh;
   background-color: var(--secondary-light-color);
+  background-image: url('/img/ornament-bg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30%; 
   
 }
 
