--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root{
+  --primary-color: #6B0038;
+  --secondary-color: #FABDD4;
+  --secondary-light-color: #FCD4E3;
+  --text-light: #FFFFFF;
+  --text-dark: #292929;
+  --h1-desktop: bold 40px;
+  --h1-h2-mobile-desktop: bold 24px;
+  --h2-mobile: bold 16px;
+  --p: 16px;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html,
 body {
   max-width: 100vw;
+  max-height: 100vh;
+  background-color: var(--secondary-light-color);  
 }
 
 a {
