--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-:root{
-  --primary-color: #6B0038;
-  --secondary-color: #FABDD4;
-  --secondary-light-color: #FCD4E3;
-  --text-light: #FFFFFF;
+:root {
+  --primary-color: #6b0038;
+  --secondary-color: #fabdd4;
+  --secondary-light-color: #fcd4e3;
+  --text-light: #ffffff;
   --text-dark: #292929;
+
+  --h1-size-desktop: 40px;
+  --h2-size-desktop: 24px;
+
+  --h1-size-mobile: 24px;
+  --h2-size-mobile: 16px;
+  /*
+  En algún momento investigar porque así no funcionan:
   --h1-desktop: bold 40px;
   --h1-h2-mobile-desktop: bold 24px;
   --h2-mobile: bold 16px;
+  */
   --p: 16px;
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
   font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
+  background-color: var(--secondary-light-color);
   max-height: 100vh;
-  background-color: var(--secondary-light-color);  
+  max-width: 100vw;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1 {
+  color: var(--primary-color);
+  font-size: var(--h1-size-desktop);
+}
+
+h2 {
+  font: var(--h2-size-desktop);
+}
+
+h1,
+h2 {
+  font-weight: bold;
+  line-height: 1.5;
+  text-align: center;
 }
