--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,9 @@
 
   --h1-size-mobile: 24px;
   --h2-size-mobile: 16px;
+
+  --h3-size-desktop: 18px;
+  --h3-size-mobile: 16px;
   /*
   En algún momento investigar porque así no funcionan:
   --h1-desktop: bold 40px;
@@ -45,12 +48,31 @@ h1 {
 }
 
 h2 {
-  font: var(--h2-size-desktop);
+  font-size: var(--h2-size-desktop);
+}
+
+h3 {
+  font-size: var(--h3-size-desktop);
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-weight: bold;
   line-height: 1.5;
   text-align: center;
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: var(--h1-size-mobile);
+  }
+
+  h2 {
+    font-size: var(--h2-size-mobile);
+  }
+
+  h3 {
+    font-size: var(--h3-size-mobile);
+  }
 }
