css tirada listo, no responsive aun

--- a/src/app/components/Footer/footer.module.css
+++ b/src/app/components/Footer/footer.module.css
@@ -6,6 +6,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    position: sticky;
+    bottom: 0;
 }
 .footer p{
     font-size: var(--p);
