--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,5 @@
 .main {
+  width: 100vw;
   background-image: url('/img/ornament-bg.png');
   background-position: right;
   background-repeat: no-repeat;
@@ -8,7 +9,6 @@
   height: calc(100vh - 25.2rem);
   justify-content: center;
   margin: 8rem auto;
-  max-width: 1440px;
 }
 
 .section {
