--- a/src/app/components/CardsContainer/cardsContainer.module.css
+++ b/src/app/components/CardsContainer/cardsContainer.module.css
@@ -3,7 +3,6 @@
   display: flex;
   gap: 3rem;
   justify-content: center;
-  margin: 2rem auto;
   padding: 1.9375rem 2.75rem;
   text-align: center;
 }
@@ -15,16 +14,17 @@
   border-radius: 1.5rem;
   display: flex;
   flex-direction: column;
-  /*justify-content: space-evenly;*/
   max-width: 300px;
   min-height: 770px;
   min-width: 300px;
   padding: 1.9375rem 2.75rem;
   transition: all 300ms ease-in-out;
+  position: relative;
 }
 
 .selectedCard h2 {
   margin: 1rem 0;
+
 }
 
 .selectedCard h3 {
@@ -49,6 +49,8 @@
   border-radius: 50%;
   max-width: 150px;
   padding: 3rem;
+  position: absolute;
+  bottom: 50%;
 }
 
 @media (max-width: 768px) {
