--- a/src/app/components/Input/input.module.css
+++ b/src/app/components/Input/input.module.css
@@ -15,6 +15,11 @@
     padding: 1rem 1.5rem;
   }
   
+  .form label {
+    font-weight: bold;
+    line-height: 1.5;
+  }
+
   .form input::placeholder {
     font-size: var(--p);
   }
