--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,8 @@
 html,
 body {
   background-color: var(--secondary-light-color);
-  max-height: 100vh;
+  height: 100vh;
+  width: 100vw;
   max-width: 100vw;
 }
 
