--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,22 +1,27 @@
 .main {
-  width: 100vw;
+  width: 95vw;
+  height: 90vh;
+  max-height: 100vh;
   background-image: url('/img/ornament-bg.png');
-  background-position: right;
+  background-position:right;
   background-repeat: no-repeat;
   background-size: 25%;
-  display: flex;
   gap: 3rem;
-  height: calc(100vh - 25.2rem);
-  justify-content: center;
-  margin: 8rem auto;
+  max-height: 100vh;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  text-align: center;
 }
 
 .section {
-  align-items: center;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   gap: 2rem;
-  width: 50%;
+  width: 60%;
 }
 
 h1.titleWithOrnament {
@@ -27,6 +32,7 @@ h1.titleWithOrnament {
 }
 
 .section p {
+  width: 60%;
   text-align: center;
 }
 
@@ -35,7 +41,14 @@ h1.titleWithOrnament {
   max-width: 55px;
   width: 100%;
 }
+.aside{
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 
+}
 @media (max-width: 1120px) {
   .main {
     background-position: center;
