--- a/src/app/historial/page.module.css
+++ b/src/app/historial/page.module.css
@@ -1,5 +1,28 @@
 .main{
     display: flex;
     justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
     margin: 3rem 0;
+    gap: 2rem;
 }
+
+h1.titleWithOrnament {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    min-width: 690px;
+  }
+  
+  .sakuraOrnament {
+    max-height: 60px;
+    max-width: 55px;
+    width: 100%;
+  }
+
+  .btnContainer{
+    width: 90%;
+    display: flex;
+    justify-content: end;
+  }
