--- a/src/app/components/CardsContainer/cardsContainer.module.css
+++ b/src/app/components/CardsContainer/cardsContainer.module.css
@@ -18,13 +18,12 @@
   min-height: 770px;
   min-width: 300px;
   padding: 1.9375rem 2.75rem;
-  transition: all 300ms ease-in-out;
   position: relative;
+  transition: all 300ms ease-in-out;
 }
 
 .selectedCard h2 {
   margin: 1rem 0;
-
 }
 
 .selectedCard h3 {
@@ -47,14 +46,14 @@
 .cardPlaceholder {
   background-color: rgba(255, 255, 255, 0.6);
   border-radius: 50%;
+  bottom: 50%;
   max-width: 150px;
   padding: 3rem;
   position: absolute;
-  bottom: 50%;
 }
 
 @media (max-width: 768px) {
-  .selectedCardsContainer {
+  .readingContainer {
     flex-direction: column;
   }
 
