--- a/src/app/components/Form/form.module.css
+++ b/src/app/components/Form/form.module.css
@@ -21,3 +21,11 @@
   outline-color: var(--primary-color);
   transition: all 100ms ease-in-out;
 }
+
+@media (max-width: 768px) {
+  .form input {
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+  }
+}
