--- a/src/app/components/Input/input.module.css
+++ b/src/app/components/Input/input.module.css
@@ -1,32 +1,54 @@
 .form {
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    gap: 2rem;
-  }
-  
-  .form input {
-    background: var(--text-light, #fff);
-    border: 1px solid var(--primary-color);
-    border-radius: 0.75rem;
-    font-size: var(--p);
-    padding: 1rem 1.5rem;
-  }
-  
-  .form label {
-    font-weight: bold;
-    line-height: 1.5;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  width: 40%;
+}
+
+.form input {
+  background: var(--text-light, #fff);
+  border: 1px solid var(--primary-color);
+  border-radius: 0.75rem;
+  font-size: var(--p);
+  padding: 1rem 1.5rem;
+}
+
+.form label {
+  font-weight: bold;
+  line-height: 1.5;
+}
+
+.form input::placeholder {
+  font-size: var(--p);
+}
+
+.form input:focus {
+  outline: 0.1rem solid;
+  outline-color: var(--primary-color);
+  transition: all 100ms ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .form {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0 1rem;
+    width: 70%;
   }
 
-  .form input::placeholder {
-    font-size: var(--p);
+  .form input {
+    width: 70%;
   }
-  
-  .form input:focus {
-    outline: 0.1rem solid;
-    outline-color: var(--primary-color);
-    transition: all 100ms ease-in-out;
+}
+
+@media (max-width: 480px) {
+  .form {
+    width: 100%;
   }
-  
+
+  .form input {
+    width: 100%;
+  }
+}
