--- a/src/app/tirada/page.module.css
+++ b/src/app/tirada/page.module.css
@@ -1,14 +1,14 @@
 .main {
-  width: 100vw;
+  align-items: center;
   background-image: url('/img/ornament-bg.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 60%;
-  min-height: calc(100vh - 25.2rem);
   display: flex;
-  align-items: center;
   flex-direction: column;
   gap: 2rem;
+  min-height: calc(100vh - 25.2rem);
+  width: 100vw;
 }
 
 h1.titleWithOrnament {
@@ -25,12 +25,12 @@ h1.titleWithOrnament {
   width: 100%;
 }
 
-
 .buttonsContainer {
   display: flex;
   gap: 4rem;
   justify-content: center;
   margin-bottom: 3rem;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -42,6 +42,14 @@ h1.titleWithOrnament {
     align-items: center;
     flex-direction: column;
     gap: 2rem;
-    margin: 0 auto;
+    margin: 0 auto 4rem;
+    padding: 0 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .linkHistory {
+    max-width: 100%;
+    width: 100%;
   }
 }
